force-app/main/default/objects/Musteri__c/Musteri__c.object-meta.xml
<CustomObject>
    <label>Musteri</label>
    <nameField>
        <label>Musteri Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Musteriler</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>