force-app/main/default/objects/Musteri__c/fields/Cep_Telefonu__c.field-meta.xml
<CustomField>
    <fullName>Cep_Telefonu__c</fullName>
    <label>Cep Telefonu</label>
    <type>Phone</type>
</CustomField>