force-app/main/default/objects/Musteri__c/fields/Musterinin_Adi__c.field-meta.xml
<CustomField>
    <fullName>Musterinin_Adi__c</fullName>
    <label>Musterinin Adi</label>
    <length>20</length>
    <type>Text</type>
</CustomField>