force-app/main/default/objects/Musteri__c/fields/Soyadi__c.field-meta.xml
<CustomField>
    <fullName>Soyadi__c</fullName>
    <label>Soyadi</label>
    <length>12</length>
    <type>Text</type>
</CustomField>